--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Open Coverage</title>
 
 	<script src="openlayers/OpenLayers.js" type="text/javascript"></script>
-	<script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2" type="text/javascript"></script>
+	<script src="OpenStreetMap.js" type="text/javascript"></script>
 	<script src="Data.js" type="text/javascript"></script>
 	<script src="HeatmapLayer.js" type="text/javascript"></script>
 	<script src="Map.js" type="text/javascript"></script>
