--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Open Coverage</title>
+	<title>In your browser!</title>
 
 	<script src="openlayers/OpenLayers.js" type="text/javascript"></script>
 	<script src="OpenStreetMap.js" type="text/javascript"></script>
