some style updates

--- a/opencoverage/index.html
+++ b/opencoverage/index.html
@@ -8,12 +8,15 @@
    <script type="text/javascript" src="js/opencoverage.js"></script>
  </head>
  <body>
-   <header>
-     <p>OpenCoverage</p>
-     <ul>
-     	<li></li>
-     </ul>
-   </header>
-   <section id="map" />
+  <header>
+   <p>OpenCoverage</p>
+   <nav>
+    <ul>
+     <li><a href="index.html">Coverage</a></li>
+     <li><a href="about.html">About</a></li>
+    </ul>
+   </nav>
+  </header>
+  <section id="map" />
  </body>
 </html>
