added HTML localStorage support

--- a/opencoverage/index.html
+++ b/opencoverage/index.html
@@ -7,6 +7,7 @@
    <script type="text/javascript" src="js/jquery-1.6.min.js"></script>
    <script type="text/javascript" src="js/OpenStreetMap.js"></script>
    <script type="text/javascript" src="js/HeatmapLayer.js"></script>
+   <script type="text/javascript" src="js/JSON.js"></script>
    <script type="text/javascript" src="js/Map.js"></script>
  </head>
  <body>
