logo and begin of auto-resize stuff

--- a/opencoverage/index.html
+++ b/opencoverage/index.html
@@ -3,16 +3,17 @@
  <head>
    <title>OpenCoverage</title>
    <link type="text/css" rel="stylesheet" href="opencoverage.css">
-   <script type="text/javascript" src="js/openlayers-2.10/OpenLayers.js"></script>
    <script type="text/javascript" src="js/jquery-1.6.min.js"></script>
+   <script type="text/javascript" src="js/openlayers-2.10/OpenLayers.js"></script>
    <script type="text/javascript" src="js/OpenStreetMap.js"></script>
    <script type="text/javascript" src="js/Data.js"></script>
    <script type="text/javascript" src="js/HeatmapLayer.js"></script>
+   <script type="text/javascript" src="js/opencoverage.js"></script>
    <script type="text/javascript" src="js/Map.js"></script>
  </head>
  <body>
   <header>
-   <p>OpenCoverage</p>
+   <img src="img/opencoverage.png" />
    <nav>
     <ul>
      <li><a href="index.html">Coverage</a></li>
@@ -20,6 +21,6 @@
     </ul>
    </nav>
   </header>
-  <section id="map" />
+  <div id="map"></div>
  </body>
 </html>
