--- a/opencoverage/index.html
+++ b/opencoverage/index.html
@@ -7,7 +7,6 @@
    <script type="text/javascript" src="js/openlayers-2.10/OpenLayers.js"></script>
    <script type="text/javascript" src="js/OpenStreetMap.js"></script>
    <script type="text/javascript" src="js/HeatmapLayer.js"></script>
-   <script type="text/javascript" src="js/opencoverage.js"></script>
    <script type="text/javascript" src="js/JSON.js"></script>
    <script type="text/javascript" src="js/Map.js"></script>
  </head>
@@ -16,7 +15,7 @@
    <img src="img/opencoverage.png" />
    <nav>
     <ul>
-     <li><a href="index.html">Coverage</a></li>
+     <li class="selected"><a href="index.html">Coverage</a></li>
      <li><a href="about.html">About</a></li>
     </ul>
    </nav>
